<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>it1901</groupId>
    <artifactId>ui</artifactId>

    <parent>
        <groupId>it1901</groupId>
        <artifactId>gr2214</artifactId>
        <version>0.0.1-SNAPSHOT</version>
    </parent>
 
    <dependencies>
        <dependency>
            <groupId>it1901</groupId>
            <artifactId>core</artifactId>
            <version>0.0.1-SNAPSHOT</version>            
        </dependency>

        <dependency>
            <groupId>it1901</groupId>
            <artifactId>rest</artifactId>
            <version>0.0.1-SNAPSHOT</version>
        </dependency>

        <!-- javafx -->
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>19</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-fxml</artifactId>
            <version>19</version>
        </dependency>

        <!-- junit testing with jupiter -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-params</artifactId>
        </dependency>

        <!-- test javafx with TextFX -->
        <dependency>
            <groupId>org.testfx</groupId>
            <artifactId>testfx-core</artifactId>
            <version>4.0.16-alpha</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.testfx</groupId>
            <artifactId>testfx-junit5</artifactId>
            <version>4.0.16-alpha</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.hamcrest</groupId>
            <artifactId>hamcrest</artifactId>
            <version>2.2</version>
            <scope>test</scope>
        </dependency>


    </dependencies>


    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
        		<artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                    <argLine>
                    --add-opens periodtracker.ui/periodtracker.ui=ALL-UNNAMED --add-exports javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
                    </argLine>
                </configuration>
	        </plugin>

            <plugin>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <version>0.0.8</version>
                <configuration>
                    <options>
                        <option>--enable-preview</option>
                    </options>
                    <mainClass>periodtracker.ui/periodtracker.ui.PeriodTrackerApp</mainClass>
                    <compress>2</compress>
                    <noHeaderFiles>true</noHeaderFiles>
                    <stripDebug>true</stripDebug>
                    <noManPages>true</noManPages>
                    <launcher>PeriodTrackerfx</launcher>
                    <jlinkImageName>PeriodTrackerfx</jlinkImageName>
                    <jlinkZipName>PeriodTrackerfx</jlinkZipName>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.panteleyev</groupId>
                <artifactId>jpackage-maven-plugin</artifactId>
                <version>1.4.0</version>
                <configuration>
                    <name>PeriodTrackerFX</name>
                    <appVersion>1.0.0</appVersion>
                    <vendor>it1901</vendor>
                    <destination>target/dist</destination>
                    <module>periodtracker.ui/periodtracker.ui.PeriodTrackerApp</module>
                    <runtimeImage>target/PeriodTrackerfx</runtimeImage>
                    <javaOptions>
                        <option>-Dfile.encoding=UTF-8</option>
                    </javaOptions>

                    <linuxShortcut>true</linuxShortcut>
                    <linuxMenuGroup>PeriodTrackerFX</linuxMenuGroup>

                    <winDirChooser>true</winDirChooser>
                    <winShortcut>true</winShortcut>
                    <winMenu>true</winMenu>
                    <winMenuGroup>PeriodTrackerFX</winMenuGroup>
                </configuration>
            </plugin>

            <!-- Configure Jacoco code coverage-->
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>0.8.8</version>
                <executions>
                    <execution>
                        <id>jacoco-prepare-agent</id>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                        <configuration>
                            <append>true</append>
                        </configuration>
                    </execution>
                    <execution>
                        <id>jacoco-report</id>
                        <phase>test</phase>
                        <goals>
                            <goal>report</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

			<!-- Run the spotbugs code quality tool -->
			<plugin>
				<groupId>com.github.spotbugs</groupId>
				<artifactId>spotbugs-maven-plugin</artifactId>
				<version>4.7.1.1</version>
				<configuration>
					<xmlOutput>false</xmlOutput>
					<htmlOutput>true</htmlOutput>
					<excludeFilterFile>../config/spotbugs/exclude.xml</excludeFilterFile>
				</configuration>
				<executions>
					<execution>
					<id>spotbugs-check</id>
					<phase>verify</phase>
					<goals>
						<goal>check</goal>
					</goals>
					</execution>
				</executions>
			</plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-assembly-plugin</artifactId>
                <version>3.2.0</version>
                <configuration>
                    <archive>
                        <manifest>
                            <mainClass>periodtracker.ui.PeriodTrackerApp</mainClass>
                        </manifest>
                    </archive>
                    <descriptorRefs>
                        <descriptorRef>jar-with-dependencies</descriptorRef>
                    </descriptorRefs>
                </configuration>
            </plugin>
            <!-- Run the checkstyle code quality tool -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-checkstyle-plugin</artifactId>
            </plugin>
        </plugins>
    </build>
</project>

